--- a/app/views/steplists/index.html.erb
+++ b/app/views/steplists/index.html.erb
@@ -1,6 +1,6 @@
 <div style="background-color: #F5F7FB; ">
-  <div class="steplist-show-header" style="background-color: white">
-    <div class="container steplist-header-text-container">
+  <div class="" style="background-color: white">
+    <div class="">
       <h2>Browse all steplists</h2>
     </div>
   </div>
