--- a/app/views/shared/_form_steplist.html.erb
+++ b/app/views/shared/_form_steplist.html.erb
@@ -6,7 +6,7 @@
   <% if current_user.organizations.present? %>
 
     <%= f.input :organization, label: 'Add this steplist to one of you organizations',collection: current_user.organizations.map {|org| [org.company_name, org.id]}  %>
-    <%= f.input :private,  as: :select %>
+    <%= f.input :private, label: 'Make this steplists private (Only other members for your organization with have access to this steplist)', as: :boolean, checked_value: true, unchecked_value: false%>
   <% end %>
 
   <%= f.submit %>
