--- a/app/views/steplists/show.html.erb
+++ b/app/views/steplists/show.html.erb
@@ -1,5 +1,6 @@
 
 <div class="steplist-show-wrapper">
+
   <div class="container" style="display: flex;
   justify-content: center;">
 <!-- Steplist header -->
@@ -32,7 +33,7 @@
      </ul>
   <% end %>
 
-<div style="background-color: #838C92;">
+<div style="background-color: #3767AF;">
   <!-- RENDER LÍNEA DE TIEMPO -->
   <section id="cd-timeline" class="cd-container">
     <% @steplist.steps.order(created_at: :asc).each do |step|  %>
