organization admin can add another user to an organization

--- a/app/views/organizations/_form_organization.html.erb
+++ b/app/views/organizations/_form_organization.html.erb
@@ -5,7 +5,7 @@
   <%= f.input :image_banner, label: 'Add Company Cover Image (Recommended image size: 1200x880px)'  %>
   <%= link_to "browse organizations", organizations_path, class: 'btn btn-primary btn-lg'  %>
 
-  <%= f.submit value: "Create Organization", class: 'btn btn-success btn-lg' %>
+  <%= f.submit  class: 'btn btn-success btn-lg' %>
 
 
 
