--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
-
+    <%= favicon_link_tag 'favicon.ico' %>
     <title>Stepify - Every Step counts</title>
     <meta name="description" content="Create and find simple easy-to-follow steplists to acomplish all types and tasks" >
     <meta property="og:title" content="Stepify, every step counts">
