--- a/app/views/steplists/index.html.erb
+++ b/app/views/steplists/index.html.erb
@@ -1,4 +1,4 @@
-<div style="background-color: #F5F7FB; ">
+<div style="background-color: #1b3660; ">
   <div class="" style="background-color: white">
     <div class="">
       <h2>Browse all steplists</h2>
@@ -8,7 +8,7 @@
 <div class="container">
   <%= render 'shared/tabs_index_bootstrap_tabs' %>
 
-    <div class="container steplist-cards-background" style="padding-top: 40px; background-color: gray;">
+    <div class="container steplist-cards-background" style="padding-top: 40px; background-color: #284f8a;">
 
       <%  @steplists.each do  |steplist|%>
         <%=  render 'shared/steplist_card', steplist: steplist %>
