--- a/app/views/shared/_tabs_index_bootstrap_tabs.html.erb
+++ b/app/views/shared/_tabs_index_bootstrap_tabs.html.erb
@@ -1,5 +1,5 @@
 <%if user_signed_in? %>
-  <ul class="nav nav-tabs ">
+  <ul class="nav nav-tabs stepify-index">
     <li role="presentation" class="<%= current_page?(root_path)? 'active': '' %>">
       <a href='<%= root_path %>'>All Steplists</a>
     </li>
