--- a/app/views/steplists/index.html.erb
+++ b/app/views/steplists/index.html.erb
@@ -1,7 +1,7 @@
 <div style="background-color: #1b3660; ">
-  <div class="" style="background-color: white">
-    <div class="">
-      <h2>Browse all steplists</h2>
+  <div class="">
+    <div class="container">
+      <h4 style="color: #fc6e5c; padding-top: 15px; padding-bottom: 15px;">Browse steplists:</h4>
     </div>
   </div>
 
