--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -5,6 +5,7 @@
     <div class="page-title">
       <h2> Manage your Account </h2>
     </div>
+    <%= link_to "Add new Organization", new_organization_path, class: 'btn btn-primary btn-sm'  %>
 
     <table class="table">
       <tr>
