--- a/app/views/visualizations/dashboard.html.erb
+++ b/app/views/visualizations/dashboard.html.erb
@@ -1,5 +1,7 @@
 <div class="wrapper">
   <div class="container">
+    <%= render 'shared/tabs_index_bootstrap_tabs' %>
+
     <h2><%= "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize} Dashboard"%></h2>
 
     <table class="table"g
