--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -23,10 +23,10 @@
     <div class="organization-header">
       <div class="organization-logo-container">
         <div> <%= image_tag logo_path, class: "organization-logo" %></div>
-
       </div>
 
       </div>
+      <%= render 'shared/tabs_index_bootstrap_tabs' %>
 
       <div class="organization-button-container">
       <%= link_to 'Back to organizations', organizations_path, class: 'btn btn-primary btn-xs'%>
