--- a/app/views/pages/my_pins.html.erb
+++ b/app/views/pages/my_pins.html.erb
@@ -1,13 +1,9 @@
-<div style="background-color: #F5F7FB; ">
-  <div class="steplist-show-header" style="background-color: white">
-    <div class="container steplist-header-text-container">
-      <h2>My pins</h2>
-    </div>
-  </div>
-  <%= render 'shared/tabs_index_bootstrap_tabs' %>
+<% texto = "My pinned steplists"%>
 
-  <div class="container steplist-cards-background" style="padding-top: 40; min-height: 100vh;">
-    <div class="container steplist-cards-background" style="padding-top: 40px">
+<div class ="content-vertical-space">
+  <div class="container">
+    <%= render 'shared/tabs_index_bootstrap_tabs', texto: texto%>
+    <div class="container steplist-cards-background" style="padding-top: 40px; background-color: #284f8a;">
       <% @my_pins.each do |pin| %>
         <%= render 'shared/steplist_card', steplist: pin.steplist %>
       <% end %>
