--- a/app/views/steplists/index.html.erb
+++ b/app/views/steplists/index.html.erb
@@ -4,7 +4,7 @@
 <div class="container">
   <%= render 'shared/tabs_index_bootstrap_tabs', texto: texto %>
 
-    <div class="container steplist-cards-background" style="padding-top: 40px; background-color: #284f8a;">
+    <div class="container steplist-cards-background" style= background-color: #284f8a;">
 
       <%  @steplists.each do  |steplist|%>
         <%=  render 'shared/steplist_card', steplist: steplist %>
