--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,7 +5,7 @@
 
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: $stepify-dark-gray;
+  background: gray;
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
@@ -16,7 +16,7 @@
 
 /* Logo */
 .navbar-wagon-brand img {
-  height: 25px;
+  height: 30px;
 }
 
 /* User Avatar */
