Fixed Steplist show header with backgrounds

--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -207,7 +207,7 @@ Main components
   background: #ffffff;
   border-radius: 0.25em;
   // padding: 1em;
-  box-shadow: 0 3px 0 $stepify-dark-gray;
+  box-shadow: 0 3px 0 $stepify-gray;
   min-width: 150px;
   &:hover{
     background: #C2E1FF;
