--- a/app/assets/stylesheets/pages/_steplist-show.scss
+++ b/app/assets/stylesheets/pages/_steplist-show.scss
@@ -1,5 +1,4 @@
 
-
 .steplist-show-header{
   background-color: white;
   // display: flex;
@@ -8,7 +7,7 @@
   text-align: center;
   min-height: 150px;
   margin-top: 40px;
-  box-shadow: 0 5px 0 $stepify-dark-gray;
+  box-shadow: 0 5px 0 $stepify-gray;
   padding: 15px;
   h2{
     margin: 15px;
