--- a/app/views/shared/_tabs_index_bootstrap_tabs.html.erb
+++ b/app/views/shared/_tabs_index_bootstrap_tabs.html.erb
@@ -1,6 +1,6 @@
 
 
-<div style="background-color: #1b3660; ">
+<div>
   <div class="">
     <div class="container">
       <h3 style="color: white; padding-top: 15px; padding-bottom: 15px;"><%= texto %></h3>
