--- a/app/views/shared/_steplist_card.html.erb
+++ b/app/views/shared/_steplist_card.html.erb
@@ -2,13 +2,17 @@
   <div class="steplist-card-block" >
     <div class="steplist-card">
       <div class="steplist-card-body">
-
-        <p class="author-name"> <strong>Author:</strong>
+<div>
+        <p class="author-name"> <strong>By:</strong>
           <%= "#{steplist.user.first_name.capitalize.truncate(20)} #{steplist.user.last_name.capitalize}" %>
         </p>
+</div>
+
         <strong><h5 class="steplist-card-title">
           <%= link_to "#{steplist.title.truncate(40)}",steplist_path(steplist) %>
         </h5></strong>
+
+
 
 <div class="pin-box">
 
@@ -16,23 +20,18 @@
           <% if current_user.pinned?(steplist) %>
             <div class="pin-box">
               <%= link_to steplist_pins_path(steplist), remote: true, id: "pin#{steplist.id}", class: 'pinned' do %>
-                <i class="fa fa-thumb-tack fa-xs " aria-hidden="true" ></i>
+                <i class="fa fa-thumb-tack fa-xs " aria-hidden="true" style="font-size: 20px;" ></i>
               <% end %>
             </div>
           <% else %>
           <div class="pin-box">
             <%= link_to steplist_pins_path(steplist), remote: true, id: "pin#{steplist.id}" do %>
-              <i class="fa fa-thumb-tack fa-xs " aria-hidden="true"></i>
+              <i class="fa fa-thumb-tack fa-xs " aria-hidden="true" style="font-size: 20px;"></i>
             <% end %>
           </div>
           <% end %>
         <% end %>
 </div>
-
-
-
-
-
 
       </div>
     </div>
