--- a/app/assets/stylesheets/pages/_organization-show.scss
+++ b/app/assets/stylesheets/pages/_organization-show.scss
@@ -24,6 +24,9 @@
   height: 250px;
   min-height: 80px;
   overflow: hidden;
+  flex-shrink: 0;
+  min-width: 100%;
+  min-height: 100%
 }
 
 .organization-logo-container{
@@ -51,5 +54,7 @@
   // bottom: -9999px;
   // margin: auto;
 }
-
+.organization-subtitle{
+  color: white;
+}
 
