--- a/app/views/shared/_step_card.html.erb
+++ b/app/views/shared/_step_card.html.erb
@@ -38,7 +38,7 @@
               <% unless index == 0 %>
                 <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#Modalpopup<%= step.steplist.steps[index - 1].id %>" data-dismiss="modal"> Back</button>
               <% end %>
-              <% unless index == step.steplist.steps.size-1 %>
+              <% unless index == step.steplist.steps.size - 1 %>
                 <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#Modalpopup<%= step.steplist.steps[index + 1].id %>" data-dismiss="modal"> NEXT
                 </button>
               <% end %>
